[project]
name = "nlxdftools"
version = "0.0.1"
description = "Tools for working with NEUROLIVE XDF data files."
readme = "README.md"
authors = [
    {name="Jamie Forth", email="j.forth@gold.ac.uk"},
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"

dependencies = [
    "pandas[performance]>=2.2.3",
    "matplotlib>=3.9.2",
    "scipy>=1.15.2",
    "pdxdf",
]

[project.scripts]
snakeskin-resample = "nlxdftools.snakeskin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
pdxdf = { git = "http://github.com/jamieforth/pdxdf.git", rev = "main" }
