[project]
name = "nlxdf"
version = "0.1.0"
description = "NEUROLIVE XDF data file processing."
readme = "README.md"
authors = [
    {name="Jamie Forth", email="j.forth@gold.ac.uk"},
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"

dependencies = [
    "eeglabio>=0.0.3",
    "gitpython>=3.1.44",
    "matplotlib>=3.9.2",
    "mne>=1.9.0",
    "pandas[performance]>=2.2.3",
    "pdxdf",
    "scipy>=1.15.2",
]

[project.scripts]
snakeskin-resample = "nlxdf.snakeskin:main"
readings-resample = "nlxdf.readings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
pdxdf = { git = "http://github.com/jamieforth/pdxdf.git", rev = "main" }
